# OSCGestureClassifier

./: .gitignore  CMakeLists.txt  OSCGestureClassifier.cbp  guide.txt
GestureClassification/: AbstractGestureClassifier.h  CMakeLists.txt  DtwPsClassifier.cpp  DtwPsClassifier.h  FeatureTracking.cpp  FeatureTracking.h  OSCGestureClassifier.cpp  RepClassifier.cpp  RepClassifier.h  Template.cpp  Template.h  gestureclassification.exe.stackdump
YIN/: CMakeLists.txt  YIN.cpp
examples/pd/: Pd example.pd
examples/supercollider/: minibee_datafiltering.scd  test_messages.scd
lbimproved/: CMakeLists.txt  vectordtw.h
utils/: AlphaFilter.cpp  AlphaFilter.h  CMakeLists.txt  HistogramBuffer.cpp  HistogramBuffer.h  utils.cpp  utils.h
